--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,12 @@
 .header {
-  background: #333;
-  height: 80px;
+  background: var(--gray-800);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+.header img{
+  height: 2rem;
+  padding-right: .75rem;
 }
